--- a/.env
+++ b/.env
@@ -1,4 +1,21 @@
-NODE_ENV=production
-PORT=8080
+# Guide:
+#
+# 1. Copy this file to .env
+#
+#    cp .env.sample .env
+#
+# 2. Fill the blanks
+
+NODE_ENV=development
+PORT=9000
 ALLOW_HTTP=true
+
+# Warning: PDF rendering does not work in Chrome when it is in headed mode.
 DEBUG_MODE=false
+
+
+
+#NODE_ENV=development
+#PORT=8080
+#ALLOW_HTTP=true
+#DEBUG_MODE=false
