--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,10 @@ ALLOW_HTTP=true
 
 # Warning: PDF rendering does not work in Chrome when it is in headed mode.
 DEBUG_MODE=false
+
+
+
+#NODE_ENV=development
+#PORT=8080
+#ALLOW_HTTP=true
+#DEBUG_MODE=false
